# rust-todo

./: .env  Cargo.toml  README.md
.rpm/: rust-todo.spec
migrations/2019-07-28-125909_create_event/: up.sql
src/: main.rs
src/api/: auth.rs  basic_auth.rs  events.rs  mod.rs  utils.rs
src/db/: api.rs  mod.rs  modles.rs  schema.rs
src/static/: index.html  script.js  style.css  todo-item.html
