[package]
name = "rust-todo"
version = "0.1.0"
authors = ["huang.xiangdong <huang.xiangdong@99cloud.net>"]
edition = "2018"
description = "gotham paratics app"
license = "Apache"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
chrono = { version = "0.4.7", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
dotenv = "0.14.1"
gotham = "0.4.0"
gotham_derive = "0.4.0"
serde = "1.0.98"
serde_json = "1.0.40"
serde_derive = "1.0.98"
gotham_middleware_diesel = "0.1.0"
futures = "0.1.28"
hyper = "0.12.33"
mime = "0.3.13"
uuid = { version = "0.7", features = ["serde", "v4"] }
log = "0.4.8"
env_logger = "0.6.2"
clap = "2.33.0"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
rust-todo = { path = "/usr/bin/rust-todo" }
